--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,13 +6,25 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Pablo Llanos Ortiz laopMx**\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Massachusetts. Established in 1861, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
-    "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
+    "The original MIT was adopted in 1894, it represents two figures symbolizing the fields of Science and Art. The image below displays the original seal.\n",
     "\n",
-    "![](image.png)"
+    "![](MIT_Seal.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Mit logo was created in 2003 by a team led by Matthew Carter. \n",
+    "\n",
+    "We can see the logo below\n",
+    "\n",
+    "![](MIT_Logo.png)"
    ]
   },
   {
@@ -25,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
